#666 Test and fix reading nested objects from request and JSON with validation